fix: remove buildCommands() method
Remove method from the CommandBuilder interface to use buildScript() instead. Thus CommandBuilder implementations are not required to store the list of command strings anymore.